--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -2,73 +2,64 @@
 
 <div class="spacer20"></div>
 
-<form [formGroup]="wholeForm" (ngSubmit)="submit()">
-<div class="container-fluid mx-3 border border-dark rounded">
-    <div class="row, top-buffer">
-        <div class="col">
-            <h6>Whole Chickens</h6>
-        </div> 
-    </div>
-    <div class="row, top-buffer">
-        <div class="col">
-            <div class="form-group">
-                <label for="selectChickenSize">Select Size</label>
-                <select class="form-control" id="selectChickenSize" ng-model="selectedChickenSize">
-                    <option *ngFor="let item of wholeSizes">{{ item }}</option>
-                </select>
+<form [formGroup]="wholeForm" (ngSubmit)="submitWhole()">
+    <div class="container-fluid mx-3 border border-dark rounded">
+        <div class="row top-buffer">
+            <div class="col">
+                <h6>Whole Chickens</h6>
             </div>
         </div>
-    </div>
+        <div class="row top-buffer">
+            <div class="col">
+                <div class="form-group">
+                    <label for="selectChickenSize">Select Size</label>
+                    <select class="form-control" id="selectChickenSize" formControlName="selectChickenSize">
+                        <option value="">--Select Size--</option>
+                        <option *ngFor="let item of wholeSizes">{{ item }}</option>
+                    </select>
+                </div>
+            </div>
 
-    <!-- <form [formGroup]="chickenSizeForm">
-        <div class="col">
-            <mdb-select [options]="wholeSizes" formControlName="selectChickenSize" placeholder="Select Size"></mdb-select>
-            <label>Select Size</label>
-        </div>
-    </form> -->
-    
-    <div class="row, top-buffer">
-        <div class="col">
-            <div class="form-group">
-                <label for="selectChickenQuantity">Select Quantity</label>
-                <select class="form-control" id="selectChickenQuantity" ng-model="selectedChickenQuantity">
-                    <option *ngFor="let n of [1,2,3,4,5]">{{ n }}</option>
-                </select>
+            <div class="col">
+                <div class="form-group">
+                    <label for="selectChickenQuantity">Select Quantity</label>
+                    <select class="form-control" id="selectChickenQuantity" formControlName="selectChickenQuantity">
+                        <option value="">--Select Quantity--</option>   
+                        <option *ngFor="let n of [1,2,3,4,5]">{{ n }}</option>
+                    </select>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="row top-buffer bottom-buffer">
-        <div class="col">
-            <button type="submit">Submit</button>
+        <div class="row top-buffer bottom-buffer">
+            <div class="col">
+                <button type="submit">Add</button>
+            </div>
         </div>
-    </div>
 
-</div>
+    </div>
 </form>
 
 <div class="spacer20"></div>
 
-<form [formGroup]="piecesForm" (ngSubmit)="submit()">
-<div class="container-fluid mx-3 border border-dark rounded">
-    <div class="row, top-buffer">
-        <div class="col">
-            <h6>Pieces</h6>
+<form [formGroup]="piecesForm" (ngSubmit)="submitPieces()">
+    <div class="container-fluid mx-3 border border-dark rounded">
+        <div class="row top-buffer">
+            <div class="col">
+                <h6>Pieces</h6>
+            </div>
         </div>
-    </div>
-    <div class="row, top-buffer">
-        <div class="col">
-            <div class="form-group">
+        <div class="row top-buffer">
+            <div class="col form-group">
                 <label for="selectPiecesType">Select Product</label>
-                <select (change)="selectChangePiecesTypeHandler($event)" class="form-control" id="selectPiecesType">
+                <select (change)="selectChangePiecesTypeHandler($event)" class="form-control"
+                    formControlName="selectPiecesType" id="selectPiecesType">
                     <option value="">--Select Product--</option>
                     <option *ngFor="let item of piecesProducts">{{ item }}</option>
                 </select>
             </div>
-        </div>
 
-        <div class="col">
-            <div class="form-group">
+            <div class="col form-group">
                 <label for="selectPiecesSize">Select Size</label>
                 <select class="form-control" formControlName="selectPiecesSize" id="selectPiecesSize">
                     <option value="">--Select Size--</option>
@@ -77,44 +68,79 @@
             </div>
         </div>
 
-        <div class="col">
-            <div class="form-check form-check-inline">
-                <input type="checkbox" class="form-check-input" formControlName="deboned" id="deboned">
-                <label class="form-check-label" for="deboned">Deboned</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input type="checkbox" class="form-check-input" formControlName="skinned" id="skinned">
-                <label class="form-check-label" for="skinned">Skinned</label>
-              </div>
+        <div class="row top-buffer">
+            <div class="col">
+                <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input" formControlName="deboned" id="deboned">
+                    <label class="form-check-label" for="deboned">Deboned</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input" formControlName="skinned" id="skinned">
+                    <label class="form-check-label" for="skinned">Skinned</label>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <div class="row, top-buffer">
-        <div class="col">
-            <div class="form-group">
-                <label for="selectChickenQuantity">Select Quantity</label>
-                <select class="form-control" id="selectChickenQuantity" ng-model="selectedChickenQuantity">
+        <div class="row top-buffer">
+            <div class="col form-group">
+                <label for="selectPiecesQuantity">Select Quantity</label>
+                <select class="form-control" id="selectPiecesQuantity" formControlName="selectPiecesQuantity">
+                    <option value="">--Select Quantity--</option>
                     <option *ngFor="let n of [1,2,3,4,5]">{{ n }}</option>
                 </select>
             </div>
         </div>
-    </div>
 
-    <div class="row, top-buffer bottom-buffer">
-        <div class="col">
-            <button type="submit">Submit</button>
+        <div class="row top-buffer bottom-buffer">
+            <div class="col">
+                <button type="submit">Add</button>
+            </div>
         </div>
     </div>
-</div>
 
 </form>
 
 <div class="spacer20"></div>
 
-<div class="container-fluid mx-3 border border-dark rounded">
-    <div class="row, top-buffer">
-        <div class="col">
-            <h6>Summary</h6>
+<form [formGroup]="finalForm" (ngSubmit)="submitFinal()">
+    <div class="container-fluid mx-3 border border-dark rounded">
+        <div class="row top-buffer">
+            <div class="col">
+                <h6>Summary</h6>
+            </div>
+        </div>
+
+        <div class="row top-buffer" *ngIf="bindedOrdersValues">
+            <div class="col">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Product</th>
+                            <th scope="col">Size</th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col">Deboned</th>
+                            <th scope="col">Skinned</th>
+                            <th scope="col">Remove</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let order of bindedOrdersValues">
+                            <td>{{ order.product }}</td>
+                            <td>{{ order.size }}</td>
+                            <td>{{ order.quantity }}</td>
+                            <td>{{ order.deboned }}</td>
+                            <td>{{ order.skinned }}</td>
+                            <td><button (click)="handleRemove($event)" type=”button”>Remove</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="row top-buffer bottom-buffer">
+            <div class="col">
+                <button type="submit">Submit</button>
+            </div>
         </div>
     </div>
-</div>
+</form>
