removal of order lines added

--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -130,7 +130,7 @@
                             <td>{{ order.quantity }}</td>
                             <td>{{ order.deboned }}</td>
                             <td>{{ order.skinned }}</td>
-                            <td><button (click)="handleRemove($event)" type=”button”>Remove</button></td>
+                            <td><button (click)="handleRemove(order)" type=”button”>Remove</button></td>
                         </tr>
                     </tbody>
                 </table>
