--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -2,7 +2,7 @@
 <div class="spacer20"></div>
 
 <form [formGroup]="customerForm">
-    <div class="container-fluid mx-3 bg-light border border-dark rounded">
+    <div class="container-fluid mx-3 bg-secondary text-light border border-dark rounded">
         <div class="row">
             <div class="col form-group">
                 <label for="selectCustomer">Select Customer</label>
@@ -48,7 +48,7 @@
 
         <div class="row top-buffer bottom-buffer">
             <div class="col">
-                <button type="submit">Add</button>
+                <button type="submit" class="bg-secondary text-light">Add</button>
             </div>
         </div>
 
@@ -108,7 +108,7 @@
 
         <div class="row top-buffer bottom-buffer">
             <div class="col">
-                <button type="submit">Add</button>
+                <button type="submit" class="bg-secondary text-light">Add</button>
             </div>
         </div>
     </div>
@@ -118,7 +118,7 @@
 <div class="spacer20"></div>
 
 <form [formGroup]="finalForm" (ngSubmit)="submitFinal()">
-    <div class="container-fluid mx-3 bg-dark text-light border border-dark rounded">
+    <div class="container-fluid mx-3 bg-secondary text-light border border-dark rounded">
         <div class="row top-buffer">
             <div class="col">
                 <h6>Summary</h6>
