--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,12 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" routerLink="/">{{appTitle}}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <ul class="navbar-nav mr-auto">
     <li class="nav-item active"><a class="nav-link" routerLink="/">Home</a></li>
-    <li class="nav-item"><a class="nav-link" routerLink="/order">Order</a></li>
-    <li class="nav-item"><a class="nav-link" routerLink="/inventory">Inventory</a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="/order">Bestellings</a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="/inventory">Voorraad</a></li>
+    <!-- <li class="nav-item"><a class="nav-link" routerLink="/customer">Kliente</a></li> -->
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Kliente
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <a class="dropdown-item" routerLink="/customer">Sien Kliente</a>
+        <a class="dropdown-item" routerLink="/customer-group">Sien Groepe</a>
+        <!-- <a class="dropdown-item" href="#">Something else here</a> -->
+        </div>
+    </li>
   </ul>
 </nav>
